Ui server init.
